debug: rook troubleshooting

--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -1,45 +1,311 @@
-# yamllint disable
 apiVersion: v1
-stringData:
-    admin-secret: ENC[AES256_GCM,data:HvIgwdm+yQuoEnyAtyZcIGcllJtTWL/NPrNZBL3w5tXPtTl3xZlFyA==,iv:Dvh+/GzqUv2P27SxMzbCcJLMaE+6HTIhiQN8q8BK1fA=,tag:7GWkcMNXc9+hjoqPHkrAxA==,type:str]
-    cluster-name: ENC[AES256_GCM,data:vDwf2Q==,iv:8mLqGrxJOryIwuMPI8rp2QcdhFIkBnW/bpiXX3px39M=,tag:XVAQRjlMW4O9iOPYSeK8zw==,type:str]
-    fsid: ENC[AES256_GCM,data:bzxsMV3Zhvv+1ul1k7NpOIju34RAPTqB05SooRV8X0htpo9I,iv:4i5l58VSUkfk362SZHOiNelgo2x+fcoybGtdPIwTPnQ=,tag:FW1jUuqYqpTEz4zq4RPcLw==,type:str]
-#   mon-secret: AQAE1AFhC/fVJhAAg4XdSdOZwcV1ru4DUcaDGA==
+kind: ConfigMap
+metadata:
+  name: rook-ceph-mon-endpoints
+  namespace: rook-ceph
+data:
+  data: ENC[AES256_GCM,data:hs2B4jyqtV9YJ/izzGrAgQhtzfH2wg9qLebsIiT9ErJLFljppS9quvHeTDvEPVSzMmw6oC3HAzQ7ZcDxlCxFImHABXaXNSJ+ppj17QYXaaZd9IM=,iv:20ThUT4eNJRT+2twv82cPUzpZ4BJDmCuSorpCLML8BU=,tag:s+ndQjgwNcOO0C9IT9B+bA==,type:str]
+  mapping: ENC[AES256_GCM,data:aQg=,iv:xqBO9haoybzUM7hj1oY9FFuCuS+pbu5V7w6bK6JuxKc=,tag:RgnafT7tGUKgzB3uRmwUeQ==,type:str]
+  maxMonId: ENC[AES256_GCM,data:Kw==,iv:wM+OKWLUSd3NRykhNUXdJa6ErrDsklFW6VY6W/4CFIo=,tag:06yir1zZWXuZ3c39IrYqYg==,type:str]
+sops:
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
+---
+apiVersion: v1
 kind: Secret
 metadata:
-    name: rook-ceph-mon
-    namespace: rook-ceph
+  name: rook-ceph-mon
+  namespace: rook-ceph
+data:
+  admin-secret: ENC[AES256_GCM,data:RXLRr1iUSxsjOiMPPzW58lx0SKeB2vG3/W7C+MU5nWvXD38dcMR2SSmsA5wAuISrTnzceYkiFYE=,iv:ne5uufnpFKOkimPnPQ/q1x87+SKcDLrvtTqqSjORyJU=,tag:d+U3C7262x/Obtrl/ZXoIQ==,type:str]
+  ceph-secret: ""
+  ceph-username: ""
+  cluster-name: ENC[AES256_GCM,data:MeIPln6EJjqmgLJX,iv:wfHj+Jo494WuxKB2x4jcS+UfBvquYbyjWIGAz//n0ZU=,tag:FNL2x5+o2qTJdIJ/tmWOmw==,type:str]
+  fsid: ENC[AES256_GCM,data:UDP4hJk79G3Bch9iaTPXd3GVnD+Kw7lAc7AwXL8gjau6ah7yPrNPIOkYzF31vCn8,iv:Jpn7Z83bWS6cMzelxhNIw0VvZ3UZl46Bw9A7uoqDrAY=,tag:ka5WHVnTn6sldDfYwoeDXA==,type:str]
+  mon-secret: ENC[AES256_GCM,data:WDfEplAv2HIPfeDEj7kKmA==,iv:udIM/k787A39+j8yyOV0CUMzgXYoh7ddpaDTOUE/z2s=,tag:KJ7qA5zdlj9DbxrsMC04dg==,type:str]
+type: kubernetes.io/rook
 sops:
-    kms: []
-    gcp_kms:
-        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
-          created_at: "2021-09-16T16:40:41Z"
-          enc: CiQA1r6bIDTFA7trwrRu2y/L4VCfN2wDmF9EBbHSx4GWO20pWgoSSQCbI6iey3LrflXAJ2RhYA7FNfu9dFPoZXoLLTgSCWsJH2+N6gD7V3Hkhx7wgjo+JliII1PvES5B4MvtdxS6JFbu3hjWZggMc/Q=
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2021-09-20T18:41:25Z"
-    mac: ENC[AES256_GCM,data:BYZaaxkAg3N3Sjtjv9lrtN6Wxv/e95Xt+6d3LSp7B10xmnDkJNNDZ6kQ4LtxDgD/1TJKST0DH+gmShUhQEAAL99riz17sHd/SvLVNRYzzIcTiZUH8rSu+iaD8gCTeMIHnD+H33hG4BAB/1Kdo5Igt3Fy4dliwVIRYh6+tnaRFzQ=,iv:IH3FzRX1ZN6/6b83+cIozXTmNNrrbW3wtQuuamnek8g=,tag:oJqs/cTqodfgpRyDbW82Xg==,type:str]
-    pgp:
-        - created_at: "2021-09-16T16:40:41Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
 
-            hQIMAyQ1SH08BnVLARAAwByCDSQvhaX50iLw6K3YXuSGW0oWyoeoEuL9GMYQFlPi
-            Gag/waLLE+E1O+dLp1+f+6vf6wh9AKl8IK7bb7KsV6iUZWhTpqnleq21TiVcmPKb
-            nyM4NZck1TDj+Uq1xe6PAKj/LrXYA9vmUPUH9CkR1DAboWgs1UUB6+XGTRo6g3Y5
-            vNG3+d6MkOFaAVOiiNxBlRc4oFQwsFXl+HhfDXhQm/aF1csj9junK3x3yx2rWeOB
-            o9VK6tRqCnSpYruRsDpXpWEAKkwMl8qcEKr2L4D4RzQEA27szF2gGh/dvQGwFAQ3
-            2grjRXg6u9+6dxnYBjDP46eJAWxvJI0HxEXI4w2gRDC4gznnO0Iwove++TbGJLL8
-            64GNPwvTYlge3XwShOM0pZ7Y89yqiyMcW6AvW/FowMKwoUFEgEHvflLO8MWZ4OMw
-            DucJyKIgIRUPybfKBG+/zq7ULbUUqE47hh+b8bVhteSAyKqvYWkTsLjyTeJBYZSk
-            9DC1HVZ3PaR/rR4BaxpdK3nDbxkGLaKDXOLLmugoRuej0aGoYxrnKYEKmJoLIxoq
-            GdpDy12X+95vNJBvT+mCp7nD/Xuh3k6Egr/b2SqFVQu5D9cv9IvfIByg+TPdjRBx
-            60eWspmNgJ0ncidWYAduf8E6JjnwIhu0uyYgRByKDeD8cRZCSEimEshYjQshxJDS
-            XAE4bk8A16ofWT5DPKbE5n/vI7TphoqPxyeOZyYenaqFlE7RJrWjPUJjSKIU6D3B
-            JEfq6G36m13HZmgxXGKXOflrW9T5l6rRYkikfoKLzFnZ3ZgOQIf0bfv3GGKd
-            =+Ikw
-            -----END PGP MESSAGE-----
-          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rook-csi-cephfs-node
+  namespace: rook-ceph
+data:
+  adminID: ENC[AES256_GCM,data:SWQMEWF/6uUMXwCX+I2BROsMUWE=,iv:Idk5bXyIqbB1FV0Agt2JilM1pmH5G4MZayeI3SFRRzU=,tag:mLsaRHCsOQkUpKVrLkvxeA==,type:str]
+  adminKey: ""
+type: kubernetes.io/rook
+sops:
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rook-csi-cephfs-provisioner
+  namespace: rook-ceph
+data:
+  adminID: ENC[AES256_GCM,data:zyNaF0yXIqRr8Clc8LFKNZE1kFrDBi2bwKcVpMHWLGw=,iv:QDFUbwKzt0GBcnF9s6/0TvjkwZPsGpAB/yNrEptaahM=,tag:KsUCuXuwIguATAQh2GUWeg==,type:str]
+  adminKey: ""
+type: kubernetes.io/rook
+sops:
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rook-csi-rbd-node
+  namespace: rook-ceph
+data:
+  userID: ENC[AES256_GCM,data:CY2I+zCrRkrAVEwzHyJGsQ==,iv:PfwG5gP1mzbMot719rGXTgvSCrHcTYDK7Tr6vSKGw+A=,tag:1L9uqUrwO6vvc5qIArU4+g==,type:str]
+  userKey: ""
+type: kubernetes.io/rook
+sops:
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rook-csi-rbd-provisioner
+  namespace: rook-ceph
+data:
+  userID: ENC[AES256_GCM,data:XsoqHsTsjv2buD6jN0fPQuEAEOpXehRWcoRMgw==,iv:C6b1H8+CyHbddDe5HwHp3+fIBtCdkkpB1xi+GKKliWs=,tag:EhBmrRkOL8whbWWErdTQvw==,type:str]
+  userKey: ""
+type: kubernetes.io/rook
+sops:
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rgw-admin-ops-user
+  namespace: rook-ceph
+data:
+  accessKey: ""
+  secretKey: ""
+type: kubernetes.io/rook
+sops:
+  kms: []
+  gcp_kms:
+    - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+      created_at: "2021-09-20T19:36:06Z"
+      enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2021-09-20T19:36:07Z"
+  mac: ENC[AES256_GCM,data:2mTP9FQ2+LWa3OEsgI3U/D7iTno/l3srLelQ572rxGoDJkssJw3DbQ4m0SaoUBFKrMcMsB6z4J7dVNKSR2TkzWMEwFjPam4iXeLvofNYcjIRErkcaJiH13Q6bZE7MeqEUSh0MepY4zC+i6hTzxDmAX7t2Pb/Dt8mFmqTb9BneO8=,iv:jo7Dk+lojaqrNqNO8lg2XQuBNtZ4NwCmTveun+KHuQA=,tag:hF3hDwX+/uYEMIAl7DgIfQ==,type:str]
+  pgp:
+    - created_at: "2021-09-20T19:36:06Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
+
+        hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
+        Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
+        SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
+        K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
+        QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
+        gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
+        bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
+        AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
+        3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
+        JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
+        hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
+        XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
+        RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
+        =O7sO
+        -----END PGP MESSAGE-----
+      fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.1
