debug: rook troubleshooting

--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -16,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -64,8 +64,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -97,7 +97,7 @@ metadata:
     namespace: rook-ceph
 data:
     adminID: ENC[AES256_GCM,data:SWQMEWF/6uUMXwCX+I2BROsMUWE=,iv:Idk5bXyIqbB1FV0Agt2JilM1pmH5G4MZayeI3SFRRzU=,tag:mLsaRHCsOQkUpKVrLkvxeA==,type:str]
-    adminKey: ""
+    adminKey: ENC[AES256_GCM,data:iKEIrnF64XfYNqqhOUMovFmA9ndf0AAok0C4NqFhEe20sHxO1HWwkT/41elN1Dg2pynr5EQcah0=,iv:4j5tz0vq43+GkEEDq40BJ/DykMi6RI3Ryn+s7c13Em4=,tag:ODkM1AJpYH0Xw2DCpZSuvQ==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -108,8 +108,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -141,7 +141,7 @@ metadata:
     namespace: rook-ceph
 data:
     adminID: ENC[AES256_GCM,data:zyNaF0yXIqRr8Clc8LFKNZE1kFrDBi2bwKcVpMHWLGw=,iv:QDFUbwKzt0GBcnF9s6/0TvjkwZPsGpAB/yNrEptaahM=,tag:KsUCuXuwIguATAQh2GUWeg==,type:str]
-    adminKey: ""
+    adminKey: ENC[AES256_GCM,data:APD3EhC9ig8oOPnZRuziPu485+l7mJSdf31drtpYNx88qnhLXVk8Dx9kNulFZocsqBjuW4RNFzc=,iv:JQ6grFLIwbOW7oHWIZtFO48pQkvHXMmN0A/822cf7pE=,tag:xdToG/Ir2imHdajpkPl9JA==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -152,8 +152,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -185,7 +185,7 @@ metadata:
     namespace: rook-ceph
 data:
     userID: ENC[AES256_GCM,data:CY2I+zCrRkrAVEwzHyJGsQ==,iv:PfwG5gP1mzbMot719rGXTgvSCrHcTYDK7Tr6vSKGw+A=,tag:1L9uqUrwO6vvc5qIArU4+g==,type:str]
-    userKey: ""
+    userKey: ENC[AES256_GCM,data:VNFkYD8q+TVwAtayv5rry4TEnV3nGkTeEYqatc/fg2wWacmz0DlVUZbB++4u4m2prCP/vcRVzDc=,iv:h4LAktAzKLIUTuMR/0SQg2sUmDOpkIVPQ66PLH2xdOs=,tag:3GOhb/TG7HBKmZc3LIReMA==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -196,8 +196,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -229,7 +229,7 @@ metadata:
     namespace: rook-ceph
 data:
     userID: ENC[AES256_GCM,data:XsoqHsTsjv2buD6jN0fPQuEAEOpXehRWcoRMgw==,iv:C6b1H8+CyHbddDe5HwHp3+fIBtCdkkpB1xi+GKKliWs=,tag:EhBmrRkOL8whbWWErdTQvw==,type:str]
-    userKey: ""
+    userKey: ENC[AES256_GCM,data:3gGMg3ylQqr9fcUBnTyVAAgNdsBjbm2hbcqDUjF+9cMSrCk9C4KOA0ZJzWFjpSR8DSuDSF/ux4s=,iv:LEkCwXNSBYnWDqS34sXt4w3jSklQqn5kLYFumd4HagU=,tag:so6MrSE8MFKUQaI4hzxaTA==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -240,8 +240,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -284,8 +284,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:39:04Z"
-    mac: ENC[AES256_GCM,data:C95n4FMbgymuyYn3g8AkA+/Ky3Eiw92Ou3T/XTYIUvIWC2o94pDDIbln0hrlBhrd/WRhPq4xY1B8BEFjpEGwhT3ZES0YcjdgNlxb/AYCDgJcoNnuoC3CYKApb3RQuY2mC4USotCl1mv27YOVvYatrhA+gRGIk/pjSE+Ur+W5/II=,iv:JrtQPYWayeyeRnzh9kLyuykBOJZqa5YycC2QXdLsqBw=,tag:ehvlcwrTsejg7MsGdSOpFQ==,type:str]
+    lastmodified: "2021-09-20T19:42:37Z"
+    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
