--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -16,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
+    lastmodified: "2021-09-20T19:44:26Z"
+    mac: ENC[AES256_GCM,data:0B3mpbEkt9l4SJwEksnNY6QH8ZKC14zPeFI6hjBbkkXg0wT54s4f+ErknHB7ROjmXxcDQBA0SgZIh86cxm6LijWqXTGLYjB2BAM/9vpXElaUWUxDwlsXHSSUx/yDraLNrHcfYFAvpNnY2+MZ51LdyeVlviLyOowRzT2u03JeRA8=,iv:cdFbEK+wQxxhaUuA3DiaOV1lcWU32s38yhgEnfrTtPw=,tag:Z390lwmo0tDZipS9+f4uqw==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -64,8 +64,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
+    lastmodified: "2021-09-20T19:44:26Z"
+    mac: ENC[AES256_GCM,data:0B3mpbEkt9l4SJwEksnNY6QH8ZKC14zPeFI6hjBbkkXg0wT54s4f+ErknHB7ROjmXxcDQBA0SgZIh86cxm6LijWqXTGLYjB2BAM/9vpXElaUWUxDwlsXHSSUx/yDraLNrHcfYFAvpNnY2+MZ51LdyeVlviLyOowRzT2u03JeRA8=,iv:cdFbEK+wQxxhaUuA3DiaOV1lcWU32s38yhgEnfrTtPw=,tag:Z390lwmo0tDZipS9+f4uqw==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -97,7 +97,7 @@ metadata:
     namespace: rook-ceph
 data:
     adminID: ENC[AES256_GCM,data:SWQMEWF/6uUMXwCX+I2BROsMUWE=,iv:Idk5bXyIqbB1FV0Agt2JilM1pmH5G4MZayeI3SFRRzU=,tag:mLsaRHCsOQkUpKVrLkvxeA==,type:str]
-    adminKey: ENC[AES256_GCM,data:iKEIrnF64XfYNqqhOUMovFmA9ndf0AAok0C4NqFhEe20sHxO1HWwkT/41elN1Dg2pynr5EQcah0=,iv:4j5tz0vq43+GkEEDq40BJ/DykMi6RI3Ryn+s7c13Em4=,tag:ODkM1AJpYH0Xw2DCpZSuvQ==,type:str]
+    adminKey: ENC[AES256_GCM,data:APD3EhC9ig8oOPnZRuziPu485+l7mJSdf31drtpYNx88qnhLXVk8Dx9kNulFZocsqBjuW4RNFzc=,iv:JQ6grFLIwbOW7oHWIZtFO48pQkvHXMmN0A/822cf7pE=,tag:xdToG/Ir2imHdajpkPl9JA==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -108,8 +108,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
+    lastmodified: "2021-09-20T19:44:26Z"
+    mac: ENC[AES256_GCM,data:0B3mpbEkt9l4SJwEksnNY6QH8ZKC14zPeFI6hjBbkkXg0wT54s4f+ErknHB7ROjmXxcDQBA0SgZIh86cxm6LijWqXTGLYjB2BAM/9vpXElaUWUxDwlsXHSSUx/yDraLNrHcfYFAvpNnY2+MZ51LdyeVlviLyOowRzT2u03JeRA8=,iv:cdFbEK+wQxxhaUuA3DiaOV1lcWU32s38yhgEnfrTtPw=,tag:Z390lwmo0tDZipS9+f4uqw==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -152,8 +152,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
+    lastmodified: "2021-09-20T19:44:26Z"
+    mac: ENC[AES256_GCM,data:0B3mpbEkt9l4SJwEksnNY6QH8ZKC14zPeFI6hjBbkkXg0wT54s4f+ErknHB7ROjmXxcDQBA0SgZIh86cxm6LijWqXTGLYjB2BAM/9vpXElaUWUxDwlsXHSSUx/yDraLNrHcfYFAvpNnY2+MZ51LdyeVlviLyOowRzT2u03JeRA8=,iv:cdFbEK+wQxxhaUuA3DiaOV1lcWU32s38yhgEnfrTtPw=,tag:Z390lwmo0tDZipS9+f4uqw==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -185,7 +185,7 @@ metadata:
     namespace: rook-ceph
 data:
     userID: ENC[AES256_GCM,data:CY2I+zCrRkrAVEwzHyJGsQ==,iv:PfwG5gP1mzbMot719rGXTgvSCrHcTYDK7Tr6vSKGw+A=,tag:1L9uqUrwO6vvc5qIArU4+g==,type:str]
-    userKey: ENC[AES256_GCM,data:VNFkYD8q+TVwAtayv5rry4TEnV3nGkTeEYqatc/fg2wWacmz0DlVUZbB++4u4m2prCP/vcRVzDc=,iv:h4LAktAzKLIUTuMR/0SQg2sUmDOpkIVPQ66PLH2xdOs=,tag:3GOhb/TG7HBKmZc3LIReMA==,type:str]
+    userKey: ENC[AES256_GCM,data:3gGMg3ylQqr9fcUBnTyVAAgNdsBjbm2hbcqDUjF+9cMSrCk9C4KOA0ZJzWFjpSR8DSuDSF/ux4s=,iv:LEkCwXNSBYnWDqS34sXt4w3jSklQqn5kLYFumd4HagU=,tag:so6MrSE8MFKUQaI4hzxaTA==,type:str]
 type: kubernetes.io/rook
 sops:
     kms: []
@@ -196,8 +196,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
+    lastmodified: "2021-09-20T19:44:26Z"
+    mac: ENC[AES256_GCM,data:0B3mpbEkt9l4SJwEksnNY6QH8ZKC14zPeFI6hjBbkkXg0wT54s4f+ErknHB7ROjmXxcDQBA0SgZIh86cxm6LijWqXTGLYjB2BAM/9vpXElaUWUxDwlsXHSSUx/yDraLNrHcfYFAvpNnY2+MZ51LdyeVlviLyOowRzT2u03JeRA8=,iv:cdFbEK+wQxxhaUuA3DiaOV1lcWU32s38yhgEnfrTtPw=,tag:Z390lwmo0tDZipS9+f4uqw==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -231,6 +231,16 @@ data:
     userID: ENC[AES256_GCM,data:XsoqHsTsjv2buD6jN0fPQuEAEOpXehRWcoRMgw==,iv:C6b1H8+CyHbddDe5HwHp3+fIBtCdkkpB1xi+GKKliWs=,tag:EhBmrRkOL8whbWWErdTQvw==,type:str]
     userKey: ENC[AES256_GCM,data:3gGMg3ylQqr9fcUBnTyVAAgNdsBjbm2hbcqDUjF+9cMSrCk9C4KOA0ZJzWFjpSR8DSuDSF/ux4s=,iv:LEkCwXNSBYnWDqS34sXt4w3jSklQqn5kLYFumd4HagU=,tag:so6MrSE8MFKUQaI4hzxaTA==,type:str]
 type: kubernetes.io/rook
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: rgw-admin-ops-user
+#   namespace: rook-ceph
+# data:
+#   accessKey: ""
+#   secretKey: ""
+# type: kubernetes.io/rook
 sops:
     kms: []
     gcp_kms:
@@ -240,52 +250,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
-    pgp:
-        - created_at: "2021-09-20T19:36:06Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
-
-            hQIMAyQ1SH08BnVLARAAwx0VHYqr1S2T1FqBKnRHwjlQLJUpzMx7VBV5IrJ/S6iI
-            Dfm1CXJjDaDmdwUz4FmT4aQTqk9axwQt+KLmH3GAly2rRbTctDTMzKht4lRQ4lK1
-            SNtfJnDFjqjFbTM3m+Qb2cEbma/FTfP6MI0/B1hdE1LdJsm99J2fiR1oRfJWcHUf
-            K5/ZQWKgQ1Y948Qb0fdngP91Stl+KLJQx1WmUd85xGT8cmyMW78wYFqtCiQ6zxfz
-            QR9cxr4OgIktiCWaV5DwNotvwg1GgDJfjIAsGtpde8Y+hQbVcR3qzUCF8R6hth2L
-            gWczJh6v5HUPdH4p/mbjTYIPQ18j1+b0WifqNV+oy+x59oHiL+E8tu6dNbyh0dxC
-            bK57wRInCzooo8SVqSXB+/dK30rUY910h2l7Th0ur8aMBVMX2tB8vAB3rg1cX4zv
-            AXydPf7oDH/XawGGY1yuTFnOykNQBjIsDKqaB8k+0fGKD+4uy/LzytuXdzj9eY0n
-            3Ozb2V7vUH4tr75pyIC/LLfNo8V/3eur8qWTYsZdgjEMG/iWqswM+LEOqpRvOT1l
-            JXx2eX1u0z57i1HswtaM2pvkuh8qXbl4hjQhCg5DM5VpdqfK7uv3uFxZ8I/BFGhd
-            hdTEJa083k0E4sSdc0hOBv8+VJzNCCUZEM3eSuFFuMCfUcYlLcQQ2QmD9RW8kqPS
-            XgF29UQYzqJ/ySc1BGo6eqIT7seRJj3MGW1fNA5E1NDoAdoVthuNtgxcrteWZNnZ
-            RjDlg03BIcBWM7lQIMgoqutovOMYLg8mznli77aWQOmAmPqqDW77/mv3U6EvG/A=
-            =O7sO
-            -----END PGP MESSAGE-----
-          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
----
-apiVersion: v1
-kind: Secret
-metadata:
-    name: rgw-admin-ops-user
-    namespace: rook-ceph
-data:
-    accessKey: ""
-    secretKey: ""
-type: kubernetes.io/rook
-sops:
-    kms: []
-    gcp_kms:
-        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
-          created_at: "2021-09-20T19:36:06Z"
-          enc: CiQA1r6bIIWOqENJNDN1cQG5g7o3ZlkCvZYcZ/CBCvhwhjgrrVMSSQCbI6iev6zyhQqefTSMpO7Vhiwl+ARqcI+RrG0KjvKA94i4IV4MmnvONOCJdk5aJyX0m8MFMiunRErTYCWerc7X6mPY1mykToY=
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2021-09-20T19:42:37Z"
-    mac: ENC[AES256_GCM,data:xw0c/njAoJ9yhcQcjx2o7GROqnZvNoUm1gpRajyFSizXoHsDT+fFCufHb/qUCUTb78x00OI1VyG7iTOO+V2/lF8F8N//eIWBIW1uiZLv9T85gEzsQQv6ftq2qp940EGrxU+ABj2F7bzRwI5KYBmBbpkxSULl4dWO383llFJtWAU=,iv:gKCCTAx2vO8EZ4unWSZhbLnWEXl73GoGjb5lRtKwGgI=,tag:wOkq0QvFmQvKxJerGlvzag==,type:str]
+    lastmodified: "2021-09-20T19:44:26Z"
+    mac: ENC[AES256_GCM,data:0B3mpbEkt9l4SJwEksnNY6QH8ZKC14zPeFI6hjBbkkXg0wT54s4f+ErknHB7ROjmXxcDQBA0SgZIh86cxm6LijWqXTGLYjB2BAM/9vpXElaUWUxDwlsXHSSUx/yDraLNrHcfYFAvpNnY2+MZ51LdyeVlviLyOowRzT2u03JeRA8=,iv:cdFbEK+wQxxhaUuA3DiaOV1lcWU32s38yhgEnfrTtPw=,tag:Z390lwmo0tDZipS9+f4uqw==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
