debug: rook troubleshooting

--- a/cluster/core/rook-ceph/secret.sops.yaml
+++ b/cluster/core/rook-ceph/secret.sops.yaml
@@ -16,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:52:36Z"
-    mac: ENC[AES256_GCM,data:gPmLTa6U0s6UcrOgGsA4ro3AGrJNaSstDq53jUEwLxi0KorTx9jmQ/ZO+ZsmD3HdSkjJXpDQJumYXl3gQTMxcFdq1PICgRv1nPvkk+5vyLBDAOvsjQUw9OEzcHD/p/TW4xyWyMnA98NFzt4VBNULNy4XUGLZAJPXlgWEj+t18X4=,iv:Ys5IhpvUR4TDxxeMmbE6B6cpvks9AJnfhBl8kfxM8B0=,tag:NMlh4nsdzAWPEtxtHYVC0Q==,type:str]
+    lastmodified: "2021-09-20T19:58:12Z"
+    mac: ENC[AES256_GCM,data:LICxlCLDbUj10RmxIzF6KVPFH3z2bDdiGahisiNrXq8JyT+K+9quJiI5oYQYHEE34eJ1kuFPQrs0NLB8TxG3Ta/aeoieUgLKscjtVsJeVtomcqJLNUh75M11ETWg+XdlouvJ1ITGWJqD99ppgSAhVIlMaUZLebZLV4HF/3heoBg=,iv:0sVNlH7R22iSGDm4l3VeCs7NSaUNZqC6FtS33Lzrhuc=,tag:+KXyHSYK/fO/09HbLazIZg==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
@@ -50,7 +50,7 @@ metadata:
 data:
     admin-secret: ENC[AES256_GCM,data:RXLRr1iUSxsjOiMPPzW58lx0SKeB2vG3/W7C+MU5nWvXD38dcMR2SSmsA5wAuISrTnzceYkiFYE=,iv:ne5uufnpFKOkimPnPQ/q1x87+SKcDLrvtTqqSjORyJU=,tag:d+U3C7262x/Obtrl/ZXoIQ==,type:str]
     ceph-secret: ""
-    ceph-username: ""
+    ceph-username: ENC[AES256_GCM,data:N0CRPsQEzvthGayjaQARyQ==,iv:0hg6uG689XxJ/hxwsN+/ni2e2tQad4XaPSKIGgXTmD8=,tag:kHy02waV+a+LWpxLyqGv2Q==,type:str]
     cluster-name: ENC[AES256_GCM,data:YkGZ7GHVwBE=,iv:0b4rVa1iSmbj/UMwMDCgfJy8vF0olE3KoF1dYtmo3+Q=,tag:mLcN5nGqG/pOZKCnv+dUCg==,type:str]
     fsid: ENC[AES256_GCM,data:UDP4hJk79G3Bch9iaTPXd3GVnD+Kw7lAc7AwXL8gjau6ah7yPrNPIOkYzF31vCn8,iv:Jpn7Z83bWS6cMzelxhNIw0VvZ3UZl46Bw9A7uoqDrAY=,tag:ka5WHVnTn6sldDfYwoeDXA==,type:str]
     mon-secret: ENC[AES256_GCM,data:ub8gzzyL6b5B6ilFjh/Ag7rNL43cuWZ6PTVrPCc7DCH2rxr8gO8rhWm9b7FBhGimK+2T5/c/Pok=,iv:jqOizYbKV/pS/hyNvBW70bo+AsF7lfHbIh0MaS9iUwk=,tag:PF1tU+6dplQiK5jQI455nQ==,type:str]
@@ -64,8 +64,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T19:52:36Z"
-    mac: ENC[AES256_GCM,data:gPmLTa6U0s6UcrOgGsA4ro3AGrJNaSstDq53jUEwLxi0KorTx9jmQ/ZO+ZsmD3HdSkjJXpDQJumYXl3gQTMxcFdq1PICgRv1nPvkk+5vyLBDAOvsjQUw9OEzcHD/p/TW4xyWyMnA98NFzt4VBNULNy4XUGLZAJPXlgWEj+t18X4=,iv:Ys5IhpvUR4TDxxeMmbE6B6cpvks9AJnfhBl8kfxM8B0=,tag:NMlh4nsdzAWPEtxtHYVC0Q==,type:str]
+    lastmodified: "2021-09-20T19:58:12Z"
+    mac: ENC[AES256_GCM,data:LICxlCLDbUj10RmxIzF6KVPFH3z2bDdiGahisiNrXq8JyT+K+9quJiI5oYQYHEE34eJ1kuFPQrs0NLB8TxG3Ta/aeoieUgLKscjtVsJeVtomcqJLNUh75M11ETWg+XdlouvJ1ITGWJqD99ppgSAhVIlMaUZLebZLV4HF/3heoBg=,iv:0sVNlH7R22iSGDm4l3VeCs7NSaUNZqC6FtS33Lzrhuc=,tag:+KXyHSYK/fO/09HbLazIZg==,type:str]
     pgp:
         - created_at: "2021-09-20T19:36:06Z"
           enc: |
