--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - secret.sops.yaml
   - helm-release.yaml
   - storage
-  # - rook-direct-mount
+  - rook-direct-mount
   # - service-monitors
   # - snapshot-controller
   # - dashboard
