--- a/cluster/apps/networking/blocky/helm-release.yaml
+++ b/cluster/apps/networking/blocky/helm-release.yaml
@@ -84,6 +84,14 @@ spec:
         path: /metrics
       httpPort: 4000
       logLevel: info
+    persistence:
+      whitelists:
+        enabled: true
+        mountPath: /app/whitelists
+        type: custom
+        volumeSpec:
+          configMap:
+            name: blocky-whitelist
     podAnnotations:
       configmap.reloader.stakater.com/reload: "blocky-config"
     affinity:
