fix: tone down etcd backups

--- a/ansible/inventory/home-cluster/group_vars/master/k3s-etcd-snapshots.sops.yaml
+++ b/ansible/inventory/home-cluster/group_vars/master/k3s-etcd-snapshots.sops.yaml
@@ -1,5 +1,5 @@
 kind: Secret
-etcd_snapshot_schedule_cron: ENC[AES256_GCM,data:x2mHcrw99/04vK8=,iv:BSu7jOEZsTszZk+re+G0IrIYRi8qlWaCCBSt8N9pqOI=,tag:gLM2gY4Cdghy8RzBOoRNVg==,type:str]
+etcd_snapshot_schedule_cron: ENC[AES256_GCM,data:KpZWRZxWQaRf,iv:i4J+AIdVsrhwsjR8N0RZNE77oYubGB19/4PfmoHHXug=,tag:0F/5VwSHJO2PANJApZujnQ==,type:str]
 etcd_snapshot_retention: ENC[AES256_GCM,data:jV8=,iv:I6/egwWct5m7SPRV3sDpHWNA5Mv6E8Rj07bcAjJW8QI=,tag:pmM8ht/8yf3FsFwIEIUO+A==,type:int]
 etcd_s3: ENC[AES256_GCM,data:zUimKw==,iv:qBbGsJmOR3m4GiOcu3sW19fR7IaKExehyjVutKF7AYo=,tag:EvOMsg7F0M5NPKX5vsEAIQ==,type:bool]
 etcd_s3_endpoint: ENC[AES256_GCM,data:zGpDwqIs6vtkvjDB6oB7nfFmRHY0QV1Xpr4d3EiO,iv:Fs017BPe5PWoausqZ1qG/kkanSlavlyQQq9aa72engM=,tag:U94jlbqCg9HPZAEx9E+5RQ==,type:str]
@@ -15,8 +15,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-19T01:36:29Z"
-    mac: ENC[AES256_GCM,data:Jg85rnGVn7F5/5SbJpBH3B7SoTQR9lS7rWbN8Qn62FAP51XpDwF5/+0TDgPI+NOHIrf2IqfEGW2+MMBzt0b2jDngaTWrK4maJD2EOdTr1YRwG6h2B8M4dR+NTK4KCqoV3SocWZINN4ACXlkW3v3d/H2I48HrcD0Krhq+ENBrPUg=,iv:sUQL7xYXlmZCEjiHAcoDAgLKuneF8Qebr87Berf1nfw=,tag:0GbGMpxZfgpvqDvNWYLsCw==,type:str]
+    lastmodified: "2021-09-21T01:09:13Z"
+    mac: ENC[AES256_GCM,data:vdy26LgHb/H7Q2bOsiRP5UF2xcZ/wAnFp3GiZAwfFH6DUj7w/tC23BcgneaaL2NGfhXA6GSa2g0sD/OcJqgOj/XUd5tL5EecLLSv0hpb9/FL93t91YkDMYryCdDZ3+GPED75Nqf9oKKZbKvwfBSNu11cD+h35fPbIFZcwRniI0w=,iv:P2xeKGONTnOEM/SbPhVxy3hC6GZbzbt/HawcM+Gz9s4=,tag:wI6DvvVNx4WuG11SBcdrqA==,type:str]
     pgp:
         - created_at: "2021-09-11T17:29:46Z"
           enc: |
