--- a/.github/workflows/helm-dep-update-schedule.yaml
+++ b/.github/workflows/helm-dep-update-schedule.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: azure/setup-helm@v1
         with:
           version: v3.6.3
-      - run: helm repo add k8s-at-home-library https://library-charts.k8s-at-home.com
+      - run: helm repo add k8s-at-home-library https://k8s-at-home.com/charts/
       - run: helm repo update
       - run: helm dep update
         working-directory: charts/kah-common
