fix: re-enable service monitors for rook-ceph

--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - helm-release.yaml
   - storage
   - rook-direct-mount
-  # - service-monitors
+  - service-monitors
   # - snapshot-controller
   # - dashboard
