--- a/cluster/core/cert-manager/kustomization.yaml
+++ b/cluster/core/cert-manager/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - prometheus-rule.yaml
-  # - letsencrypt-production.yaml
+  - letsencrypt-production.yaml
   - letsencrypt-staging.yaml
   - secret.sops.yaml
