--- a/cluster/core/cert-manager/letsencrypt-production.yaml
+++ b/cluster/core/cert-manager/letsencrypt-production.yaml
@@ -13,7 +13,10 @@ spec:
       - dns01:
           cloudflare:
             email: "${SECRET_EMAIL}"
-            apiKeySecretRef:
+            # apiKeySecretRef:
+            #   name: cloudflare-token-secret
+            #   key: cloudflare-token
+            apiTokenSecretRef:
               name: cloudflare-token-secret
               key: cloudflare-token
         selector:
