--- a/cluster/core/cert-manager/secret.sops.yaml
+++ b/cluster/core/cert-manager/secret.sops.yaml
@@ -15,8 +15,50 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T12:45:27Z"
-    mac: ENC[AES256_GCM,data:IcQoKDh9dnJAwWrKWTzZssn8nTretumfNhppxfDE3DLO34M2/E7iKS2p9GyTByqO5OhOf38qwP/nd++1G/V2B4EGVYKQx8eAvb2jXajcW0DgbYZgjOByEf3SheN4y5q+EpJo8HZtiRDJ/jI36YDqZweFXavflre6pxwab9OhhX4=,iv:yNm4ZEdOAY8BIHDbfJEbH8+nHfu6g6lWJunK0phhWBM=,tag:q9M/nDVkzanYQiF5S4/mYg==,type:str]
+    lastmodified: "2021-09-21T12:58:36Z"
+    mac: ENC[AES256_GCM,data:5pjWVZhlygRqUTQPVCRSpQS6TCV44kbecculb/hI3pRmeD+ZI3TixdQj9C5B1/E1OjJrMQ3a5Fn+6E+Ms0XPEbngbdQ/H8tSUdnLgYF39lcUBm8VxE375Q20O8qEwvB/gbUL4EfkQUVcHcUHXFu3KKuN5qbOGt4fXgN8O0mNXeE=,iv:uKqAyREAOuut2PInmTr+p8drLG0Zhuf6ExCIQhWg7bY=,tag:C/+ATaJa2gQd79nWK9sUcQ==,type:str]
+    pgp:
+        - created_at: "2021-09-16T12:58:25Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMAyQ1SH08BnVLARAAuExeoaTi817gHCnGqcN+3nCdr/gnTJtgouKUQs//OFtb
+            HSitqkacyBbnfY/43iSUXzMAUwNCWHaG+EmfxRIU1CWPVbVMO5el5TLcnB2gB5T2
+            BXVA6u+wUCFC+h0N0FxZspVyGa1gBpBoeGC6grHdRqrBPeAzUwd37+CeL+fqV/sU
+            aq72mWr5EhIDJq/CAoc6YaoPXstKhSVPQIFB7ANx8/bErcEMgE9WRfJzLYTBkZC6
+            D7PXgLhxppxr2mLSRUcbQGASljA3MCTjQSTHoNz2olsrZHdUC5j+wsy/1pDlA4V6
+            kjaxGn024Z3yANViQWnaPmpKL1Xbjwu/gAHCXtDMgU3eY2ejN3lIvnBNwxz+OQ47
+            XtmLKoMw+evmk7utAKL67yCgOWGVX9qwetK9EG+rPlj5exdH1VUM3/Ljj1zcRntB
+            R/N8Av7hirLp2/jf9tRJlANlCzr3J9/ZEjNyj1FCiKJTuQmwS/nyJNJuJe+C/d/r
+            B2wNvCBjnaoV1M5Y+KKOHEznCL8ydsI1HmcyOiDpaUMk6BI6/VZlBRNuCt9K0qMS
+            XQL+SdXhIBiShQMFX1D27mjTJtsn+TMr5H7eRizoG/QmBuu4dxOnzlTutTqtV607
+            pF5cHPx0NM7g+PH8hcpAYU8K2m1qxZzd9cUurKT2QLCH98MwlN/+rirCjCWBKhTS
+            XgGzE1a34i9SzyCrFgEvtpuLobmIqK5mS9RT70KXJr+Zco3cQb4znY6prGwX1dSm
+            zHve9nCPemnT3LZL593pSDbvPCnE34rifjKyFtYg8UVjG4NMY7tRF8gQI9kw+PQ=
+            =2+4M
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: cloudflare-api-token-secret
+    namespace: cert-manager
+stringData:
+    cloudflare-api-token: ENC[AES256_GCM,data:9BhrqkoeNa5/3j7110MchyovR/+2gb/elq69Q82YgezTkZ2SjvtoSA==,iv:yLxE+pDLQ1DU13j3rO5qwKlDyh/RSyHphaeYwuHZUUo=,tag:9tof8JqLfFQLUaOQt3/Yrw==,type:str]
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2021-09-16T12:58:25Z"
+          enc: CiQA1r6bIKCyYm7PjpNMMdwiO8T9+bnYYqRsVDLF4WY/gIofBZsSSQCbI6ien9kmyxwgkEcnwINz5Hb0BVaCpFPBuNMmOXEf2LlyniyaJjYQ8QwkkNNmwKUYmaAWtvpin26EYVzI4IXo9pbk8IMIz9I=
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2021-09-21T12:58:36Z"
+    mac: ENC[AES256_GCM,data:5pjWVZhlygRqUTQPVCRSpQS6TCV44kbecculb/hI3pRmeD+ZI3TixdQj9C5B1/E1OjJrMQ3a5Fn+6E+Ms0XPEbngbdQ/H8tSUdnLgYF39lcUBm8VxE375Q20O8qEwvB/gbUL4EfkQUVcHcUHXFu3KKuN5qbOGt4fXgN8O0mNXeE=,iv:uKqAyREAOuut2PInmTr+p8drLG0Zhuf6ExCIQhWg7bY=,tag:C/+ATaJa2gQd79nWK9sUcQ==,type:str]
     pgp:
         - created_at: "2021-09-16T12:58:25Z"
           enc: |
