--- a/cluster/core/cert-manager/letsencrypt-staging.yaml
+++ b/cluster/core/cert-manager/letsencrypt-staging.yaml
@@ -13,9 +13,12 @@ spec:
       - dns01:
           cloudflare:
             email: "${SECRET_EMAIL}"
-            apiKeySecretRef:
-              name: cloudflare-token-secret
-              key: cloudflare-token
+            # apiKeySecretRef:
+            #   name: cloudflare-token-secret
+            #   key: cloudflare-token
+            apiTokenSecretRef:
+              name: cloudflare-api-token-secret
+              key: cloudflare-api-token
         selector:
           dnsZones:
             - ${SECRET_DOMAIN}
