--- a/cluster/apps/networking/kustomization.yaml
+++ b/cluster/apps/networking/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   # - cloudflare-ddns
   # - error-pages
   - external-dns
-  # - secret-reflector
+  - secret-reflector
   # - traefik
   - wildcard-certificate
