--- a/cluster/apps/networking/kustomization.yaml
+++ b/cluster/apps/networking/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - blocky
-  # - cloudflare-ddns
+  - cloudflare-ddns
   - error-pages
   - external-dns
   - secret-reflector
