feat: add the system-upgrade controller

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # - media
   # - monitoring
   - networking
-  # - system-upgrade
+  - system-upgrade
   # - tools
   - velero
   # - vpn-gateway
