--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -25,5 +25,5 @@ data:
   #
   VPN_PORT: "51820"
   VPN_GATEWAY_VPN_PORT: "51820"
-  VPN_FORWARDED_PORT_1: "56059"
-  VPN_COUNTRY: CA
+  # VPN_FORWARDED_PORT_1: "56059"
+  VPN_COUNTRY: CH
