--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -12,6 +12,13 @@ data:
   KUBE_VIP_PEER_AS: "64512"
   KUBE_VIP_PEER_IP: "10.1.6.1"
   #
+  NETWORK_K8S_CLUSTER_CIDR: "10.69.0.0/16"
+  NETWORK_K8S_SERVICE_CIDR: "10.96.0.0/16"
+  NETWORK_MANAGEMENT_CIDR: "192.168.1.0/24"
+  NETWORK_SERVER_CIDR: "192.168.42.0/24"
+  NETWORK_GUEST_CIDR: "192.168.100.0/24"
+  NETWORK_IOT_CIDR: "192.168.150.0/24"
+  #
   SVC_COREDNS_ADDRESS: "192.168.69.100"
   SVC_BLOCKY_ADDR: "192.168.69.102"
   SVC_EMQX_ADDR: "192.168.69.110"
