fix: add missing rook-ceph

--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 resources:
   - secret.sops.yaml
   - cluster-external.yaml
-  # - ceph-block-pool.yaml
-  # - ceph-file-system.yaml
-  # - ceph-object.yaml
-  # - storage-class.yaml
-  # - volume-snapshot-class.yaml
+  - ceph-block-pool.yaml
+  - ceph-file-system.yaml
+  - ceph-object.yaml
+  - storage-class.yaml
+  - volume-snapshot-class.yaml
