--- a/cluster/apps/tools/filebrowser/kustomization.yaml
+++ b/cluster/apps/tools/filebrowser/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - changedetection-io
-  - filebrowser
-  # - filestash
+  - config-pvc.yaml
+  - helm-release.yaml
