--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -21,6 +21,7 @@ stringData:
     SECRET_QB_USERNAME: ENC[AES256_GCM,data:d9/r9w==,iv:gRfUOnscy7eZyonomkE24aGKRic0TRZkgUF4hBDxuos=,tag:QeurTRBt7g0pL25iEZJ/NQ==,type:str]
     SECRET_TRAEFIK_PILOT_TOKEN: ENC[AES256_GCM,data:NF90df4klaP4LtDYpjUKElWMW8/Um1/gGhJJo5rT+DtrOl2g,iv:QXr6ldwgIY19+PKlGBA+mBfbnDkcH1AFH//aPs6Qcuc=,tag:iZ1ZoVb7dpGugTtPvOnBHw==,type:str]
     SECRET_EMQX_ADMIN_PASSWORD: ENC[AES256_GCM,data:hs0evsa1FfylBZ6i7OtNGDJzm5W7WDrN4nBAd2OqiE84v5W2,iv:fGkTar+e/ajHh6BP0hkrGh5kKETQwG03uxwNy9AVwJk=,tag:Es0xLhX0w8JoFgdBI+a+5Q==,type:str]
+    SECRET_NAS_ADDR: ENC[AES256_GCM,data:VPjlAJrjj4y3,iv:AQOUA+Tq4nrx/h6UhFQ0NUzJLMmJthN5WXxUqb6/8ZI=,tag:oTr0JF5elVxHeesBWgVLDQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -30,8 +31,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-20T13:12:39Z"
-    mac: ENC[AES256_GCM,data:Fvt1t82C4M5XaLojNXCast+7MkmW/gdQBcTRH9YocAFYv60zqGW3qZmlq4ERmBturbD1MK9umLzLQ1tLXG+KeoqjAs45RbLgxRAmU8ZAnalY+qiEwbX8cfNB3wtw5xPdwKt0tJsB5/wsmiSlotw6BQIubj9wkqfwoJmXcGm6sbc=,iv:lip5Dni1dLRRntO99RT33HUTSSCz96LJbJmjv6hp2hU=,tag:DF8LRp6ig4tODAsc/rOHuA==,type:str]
+    lastmodified: "2021-09-22T23:37:58Z"
+    mac: ENC[AES256_GCM,data:ZrO6LkT0jvEHbump3DpvqoFm41o5EwDpYxhLOHPnrQxW70bYP0l6A17AYVbOUHeQDlmfEoKdBtgpBFuJvTI9TpPexVNUYCXiTnwsXCsL+tcCH7Eke/+fbABfC2jH0+IcdUiRuKKxyy27iqszjKzorz4AESrxZ+V0EaJBDDzvh8c=,iv:XRCB4zRIveVSKqHTG6/tcyCPEQzFmfKND7D0Gxaql3E=,tag:wCWBE9dDNOvSN0TQtubF4g==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
