feat: add blackbox-exporter

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   # - home
   # - kube-system
   # - media
-  # - monitoring
+  - monitoring
   - networking
   - system-upgrade
   - tools
