--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - blackbox-exporter
+  - blackbox-exporter
   # - botkube
   # - grafana
   # - kube-prometheus-stack
