--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -14,6 +14,9 @@ stringData:
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:b9elSWu7RsXnTa7vdBLCLl9cKdiC6dCnvkNHs6rSWIxuMYBh,iv:qOwXjnmItcHRisllkA0WSwWh+6mpBi9/VcfRVKgfWxM=,tag:N64gw6iZT/WRUYwz0YEYkg==,type:str]
     SECRET_HOME_DOMAIN: ENC[AES256_GCM,data:xyQkPoXBUag=,iv:UNbTWu7jZ5+aYcX328wYz3f0/o9khdNzUQOETeg7Qsg=,tag:0X93yRjciK6Zb+wCjxqloA==,type:str]
     SECRET_KURED_DISCORD_WEBHOOK: ENC[AES256_GCM,data:OPIdUqq0zgm5DDhLWSRIwjzqtPl6Uf2lFsjViMjcITv7IokL,iv:+RNmXikxmirRfSVVqcmr6HnDUIOBye+YOZ8T1YXdxRw=,tag:WJU9YT/XEnhTJF/ZjNCf/w==,type:str]
+    SECRET_LOKI_ACCESS_KEY: ENC[AES256_GCM,data:o2KTGeOWZq0vKvVVvCuWmTysiMAvsc4uGg==,iv:PzvtXIC6QlHCvdc0LUFEx331lcR7FlyUBGKjPFSJbtU=,tag:ajxErHOF8w7Ytyrs8kGC1A==,type:str]
+    SECRET_LOKI_BUCKET: ENC[AES256_GCM,data:L2KXBKUWHSU=,iv:pKoY0ZvgBFqa8fHWw8urllolk1OSENx30p540+xhFXM=,tag:phb3GZPe7l6MxtUV6BvAkA==,type:str]
+    SECRET_LOKI_SECRET_KEY: ENC[AES256_GCM,data:HgA0ccGKIauMmhpF1qW0yq52c6ejiH5+wdOXyZS8WQ==,iv:NB4VkpeGWL8SXnn9VnNG3I5fbdMOLRy6nO3RTipSh+Q=,tag:2zLaX1YgxOHtRJncRE/RsA==,type:str]
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:VvxY6bC1LWmtg6qpRHff7ZSq4UmhmbaiR/O441pJqN63fqjJ,iv:9DgZ+ki7rQ5uZYikSHEGVONnZMbYzpZj/A2GIYpom54=,tag:NKGUGIO20VGU0Xpg4wFgLA==,type:str]
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:amut8wUEkuIpq08/PPOeBafBHhvLUas8i6Y8nbNIFprZBNyk,iv:q5tkv/Bmcp7wTkjp/d2vJwduYPSMfX6OGYuQBuXzY/g=,tag:LB08ddmLXrbR8+P4mEY6fw==,type:str]
     SECRET_NAS_ADDR: ENC[AES256_GCM,data:VPjlAJrjj4y3,iv:AQOUA+Tq4nrx/h6UhFQ0NUzJLMmJthN5WXxUqb6/8ZI=,tag:oTr0JF5elVxHeesBWgVLDQ==,type:str]
@@ -29,8 +32,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-09-23T11:02:31Z"
-    mac: ENC[AES256_GCM,data:9ImSBLTYXdRo93omJEns4JZfXZa1QZRmawIat3U7IQ+EY52IZTvgaVaQJSxINvi5BekFGXqbXDUtHD5JA6pKTpW8r2otoE/qzG3wUcnKCsRxjTwRvSwQJatKtj0MmyXu6AKCS9TGLPNqJHHq1JoGFQ+/XAwh0JYdtWyIWt/Ifgc=,iv:j4NY16lo9Ao8/bPww8//39i0TBDGJ2raJzbCfJMudvY=,tag:GJIw6Jo0JJpO6D7iYkKs5A==,type:str]
+    lastmodified: "2021-09-23T11:35:24Z"
+    mac: ENC[AES256_GCM,data:agVIooZKsMPbuSAmddtitdrrifB4h8OtHycHBN6uaqaQAJSy9a46AorC67XvVZYIQRm4Qxky3iJHxCsDXGlLPWY8QLGdfTp5eQXq0zAtAAacmf7ZeOsY/D1AUqzG9+ln9gm6RLOTQwkpkEx0ed21CBHOiqwxCR3vtvv8y8SalFs=,iv:wNGch6RlQDOJq98QXT2TGhakp53/hA+5X2WfRuH3QZw=,tag:j656fuUN4ND23N2fjYDh2g==,type:str]
     pgp:
         - created_at: "2021-09-16T12:45:08Z"
           enc: |
